--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,6 +8,6 @@
                 accessToken="[put-access-token-here]"
                 on-embedded="onEmbedded($event)">
         </ngx-powerbi-component-->
-        <div id="pbi-container" style="height:780px;width:100%"></div>
+        <div id="pbi-container" style="width:100%"></div>
     </div>
 </div>
