--- a/src/assets/scss/core/layout/layout.scss
+++ b/src/assets/scss/core/layout/layout.scss
@@ -17,6 +17,7 @@
 
 .page-wrapper > .container-fluid {
   padding: 0px 0px;
+  //padding 0px 0px 0px 10px;
   min-height: calc(100vh - 180px);
 }
 #pbi-container iframe{
